assets/css/rockpaperscissors.css
main {
  text-align: center;
  font-size: 2rem;
  padding: 4rem;
}

.gameArea {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  align-items: center;
  justify-content: center;
}

.selectionArea {
  display: flex;
  gap: 1rem;
  justify-content: center;
  border: 1px solid black;
  border-radius: 1rem;
  max-width: fit-content;
}

.selection {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding: 1rem;
}

.vs {
  display: flex;
  align-items: center;

  font-size: 2rem;
  font-weight: bold;
}

.name {
  font-size: 1.5rem;
  text-align: center;
}

.selectedWeapon {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 8rem;
  height: 8rem;
}

.placeholder {
  font-size: 2rem;
}

.weapons {
  display: flex;
  justify-content: center;
  border: 1px solid black;
  border-radius: 1rem;
  max-width: fit-content;
}

.weapons .weapon {
  display: flex;
  gap: 1rem;
  padding: 1rem;
  flex-direction: column;
}

.weapons .weapon:first-child {
  border-right: 1px solid black;
}

.weapons .weapon:last-child {
  border-left: 1px solid black;
}

.weapons .weapon {
  cursor: pointer;
}

.weapons .disabled {
  cursor: default;
}

.weapons .disabled .weaponSvg {
  opacity: 0.5;
}

.weaponName {
  font-size: 1.225rem;
  text-align: center;
}

.weaponName::first-letter {
  text-transform: uppercase;
}

.weaponSvg {
  width: 6rem;
  height: 6rem;
}

.result {
  font-size: 2rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

#computerWeapon svg {
  transform: scaleX(-1);
}

.betArea {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  border: 1px solid black;
  border-radius: 1rem;
  max-width: fit-content;
  padding: 1rem;
}

.betArea label {
  font-size: 1.5rem;
}

.betArea input {
  font-size: 1.225rem;
  padding: 0.5rem;
  background-color: var(--background-color);
  border: 1px solid black;
  border-radius: 0.5rem;
  color: var(--text-color);
}

